TAG: qcreports_db-6-0-24-5
DATE: 08/28/2024
STAFF: lec
wts2-1377/fl2-960/QC reports for MP-HP match tool
#       new file:   weekly/VOC_OntologyExactMatch.py

TAG: qcreports_db-6-0-24-4
DATE: 08/26/2024
STAFF: lec
wts2-1541/fl2-957/obsoletes showing in MP Ontology terms added in the last week report
#       modified:   weekly/VOC_MPNewTerms.py

TAG: qcreports_db-6-0-24-3
DATE: 08/19/2024
STAFF: lec
wts2-1536/fl2-950/QC report/GXD HT missing annotations to RNA seq experiment variants
#       new file:   mgd/GXD_HTRNASeq.py

TAG: qcreports_db-6-0-24-2
DATE: 07/12/2024
STAFF: lec
wts2-1521/fl2-924/Strain Check by Strain Repository ID; make case insensitive
#       modified:   PRB_StrainRepoCheck.py

TAG: qcreports_db-6-0-24-1
TAG: qcreports_db-6-0-23-29
DATE: 07/10/2024
STAFF: jer
wts2-1486/fl2-911 Don't display Reset button unless there is a form.
wts2-1486/fl2-911 Enable file upload. Required major rewrite.

TAG: qcreports_db-6-0-23-28
DATE: 07/02/2024
STAFF: lec
wts2-1512/fl2-913/emageload retire/qcr.shtml

TAG: qcreports_db-6-0-23-27
DATE: 06/27/2024
STAFF: lec
wts2-1486/fix reoombinase bug/GXD_IndexOverviewUber.py

TAG: qcreports_db-6-0-23-26
TAG: qcreports_db-6-0-23-25
DATE: 06/25/2024
STAFF: lec
fixed vocload; should use ldb=15 not ldb=191
wts2-1399/fl2-905/OMIM to MIM change broke 2 DO reports
#       modified:   VOC_OMIMDOMult.py
#       modified:   VOC_OMIMDOObsolete.py

TAG: qcreports_db-6-0-23-24
DATE: 06/12/2024
STAFF: lec
wts2-1492/fl2-861/change the run frequency of some GXD QC reports and rearrange list to reflect this new run frequency
#       renamed:    weekly/GXD_DupPrimers.sql -> mgd/GXD_DupPrimers.sql
#       renamed:    mgd/GXD_FullCodeable.py -> weekly/GXD_FullCodeable.py
#       renamed:    mgd/GXD_Images.py -> weekly/GXD_Images.py
#       renamed:    mgd/GXD_LackingImages.py -> weekly/GXD_LackingImages.py
#       renamed:    mgd/GXD_WithdrawnMarker.py -> weekly/GXD_WithdrawnMarker.py

TAG: qcreports_db-6-0-23-23
DATE: 06/06/2024
STAFF: lec